[LayoutNG] Invalidate selected PaintFragment if frame focus is changed

PaintInvalidator for selection only invalidated PaintFragment when its
SelectionRect is changed.
However, if frame looses focus, we repaint its blue selection gray and since
SelectionRect is not changed, we didn't invalidate it.
This patch implements such invalidation.

This patch fixes following test on LayoutNG:
 paint/invalidation/selection/text-selection-rect-in-overflow-2.html
Rebaseline is by selection height 1px diff.

FYI:
LayoutSelection::InvalidatePaintForSelection sets LayoutObject::SetShouldInvalidateSelection()
when focus is changed.

Bug: 856928
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Iddde040b3c3be9213151955f087c1825c318779e
Reviewed-on: https://chromium-review.googlesource.com/1122056
Commit-Queue: Yoichi Osato <yoichio@chromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Reviewed-by: Koji Ishii <kojii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572728}
Former-commit-id: 4f0f389fd0abca186fc66e5e2f1ddd639c8b7501